adiconando o endpoint registro_de_campo/{id}
